swagger models control
