# api/handlers/models/author.go
@@ -1,18 +1,23 @@
 package models
 
 type Author struct {
-	ID        string `json:"id"`
+	Name string `json:"name"`
+}
+
+type AuthorResp struct {
+	AuthorId  string `json:"authorId"`
 	Name      string `json:"name"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	CreatedAt string `json:"createdAt"`
+	UpdatedAt string `json:"updatedAt"`
 }
 
 type UpdateAuthor struct {
-	ID   string `json:"id"`
 	Name string `json:"name"`
 }
 
 type ListAuthors struct {
-	Authors []Author `json:"authors"`
-	Count   int64    `json:"count"`
+	Authors []AuthorResp `json:"authors"`
+	Count   int64        `json:"count"`
 }
+
+type Empty struct{}
