# api/handlers/models/book.go
@@ -1,26 +1,24 @@
 package models
 
 type Book struct {
-	ID       string `json:"id"`
 	Name     string `json:"name"`
-	AuthorId string `json:"author_id"`
+	AuthorId string `json:"authorId"`
 }
 
 type BookResp struct {
-	ID        string `json:"id"`
-	Name      string `json:"name"`
-	Author    string `json:"author"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	ID        string     `json:"id"`
+	Name      string     `json:"name"`
+	Author    AuthorResp `json:"author"`
+	CreatedAt string     `json:"created_at"`
+	UpdatedAt string     `json:"updated_at"`
 }
 
 type UpdateBook struct {
-	ID       string `json:"id"`
 	Name     string `json:"name"`
 	AuthorId string `json:"author_id"`
 }
 
 type ListBooks struct {
-	Books []Book `json:"books"`
-	Count int64  `json:"count"`
+	Books []BookResp `json:"books"`
+	Count int64      `json:"count"`
 }
